@@ -1,5 +1,5 @@
 
-2021-11-18 0.1.1:
+2021-11-20 0.1.1:
  - 增加 Barrier Single 标准欧式单障碍期权定价功能及其示例。
  - 标准欧式单障碍增加敲出时资金立即支付和延迟支付的区分。
  - 标准欧式单障碍增加参与率参数并更新示例。
@@ -7,6 +7,7 @@
  - 增加 Autocall Booster 结构及其示例。
  - 完善 Barrier Double 结构及其示例。
  - 移除 Barrier Single 中 is_knock 参数，Payoff 改由价格 s 判断计算。
+ - 增加 Stochastic Model 随机过程模型。
 
 2021-08-25 0.1.0:
  - 构建项目基本结构。
